<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10" />

    <CheckBox
        android:id="@+id/checkBoxRemeberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:checked="false"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/buttonConnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="connectionButton"
        android:text="@string/connection" />

    <CheckBox
        android:id="@+id/checkBoxAutoConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_connection"
        android:layout_gravity="left"
        android:checked= "false"
        android:onClick="register" 
        />

</LinearLayout>